--- a/.github/workflows/windows-release-build.yml
+++ b/.github/workflows/windows-release-build.yml
@@ -251,7 +251,7 @@ jobs:
           RUST_BACKTRACE: "1"
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
-        run: npx tauri build --ci --bundles "msi,nsis" --config src-tauri/tauri.windows.conf.json
+        run: npx tauri bundle --ci --bundles "msi,nsis" --config src-tauri/tauri.windows.conf.json
 
       - name: Authenticode sign Windows installers (MSI + NSIS)
         if: ${{ steps.authenticode_meta.outputs.should_authenticode == 'true' }}
